# review

./: CMakeLists.txt  Field.cpp  Field.h  Manager.cpp  Manager.h  README.md  Segment.cpp  Segment.h  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  main.cpp  uml.clang-uml
